force-app/main/default/objects/BG_Checkout_Log__c/BG_Checkout_Log__c.object-meta.xml
<CustomObject>
    <description>This Object holds information about each time a board game was checked out and back in</description>
    <label>Board Game Checkout Log</label>
    <nameField>
        <displayFormat>BGL-{000000}</displayFormat>
        <label>Board Game Checkout Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Board Game Checkout Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>