force-app/main/default/objects/BG_Checkout_Log__c/fields/Attendee_Name__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Name__c</fullName>
    <formula>Checked_Out_By__r.Attendee_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendee Name</label>
    <type>Text</type>
</CustomField>