force-app/main/default/objects/BG_Checkout_Log__c/fields/Average_Duration__c.field-meta.xml
<CustomField>
    <fullName>Average_Duration__c</fullName>
    <formula>BG_Library_Entry__r.Board_Game__r.Playing_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>