force-app/main/default/objects/BG_Checkout_Log__c/fields/BG_Library_Entry__c.field-meta.xml
<CustomField>
    <fullName>BG_Library_Entry__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Library Entry</label>
    <referenceTo>BG_Library_Entry__c</referenceTo>
    <relationshipLabel>Board Game Checkout Logs</relationshipLabel>
    <relationshipName>Board_Game_Checkout_Logs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>