force-app/main/default/objects/BG_Checkout_Log__c/fields/Board_Game_Name__c.field-meta.xml
<CustomField>
    <fullName>Board_Game_Name__c</fullName>
    <formula>BG_Library_Entry__r.Board_Game__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Board Game Name</label>
    <type>Text</type>
</CustomField>