force-app/main/default/objects/BG_Checkout_Log__c/fields/Check_Out_Time__c.field-meta.xml
<CustomField>
    <fullName>Check_Out_Time__c</fullName>
    <defaultValue>Now()</defaultValue>
    <label>Check Out Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>