force-app/main/default/objects/BG_Checkout_Log__c/fields/Checked_Out_By__c.field-meta.xml
<CustomField>
    <fullName>Checked_Out_By__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Checked Out By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Board Game Checkout Logs</relationshipLabel>
    <relationshipName>Board_Game_Checkout_Logs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>