force-app/main/default/objects/BG_Checkout_Log__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Board Game Checkout Logs</relationshipLabel>
    <relationshipName>Board_Game_Checkout_Logs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>