force-app/main/default/objects/BG_Checkout_Log__c/fields/Total_Check_Out_Time_Formula__c.field-meta.xml
<CustomField>
    <fullName>Total_Check_Out_Time_Formula__c</fullName>
    <description>Total Time the Board Game Was Checked Out</description>
    <formula>IF(ISNULL(Check_In_Time__c),   
       TIMEVALUE(NOW()) - TIMEVALUE(Check_Out_Time__c),
       TIMEVALUE(Check_In_Time__c) - TIMEVALUE(Check_Out_Time__c) 
)/60/1000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Time the Board Game Was Checked Out</inlineHelpText>
    <label>Total Check Out Time (in Min)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>