force-app/main/default/objects/BG_Checkout_Log__c/fields/Total_Min_Checked_Out__c.field-meta.xml
<CustomField>
    <fullName>Total_Min_Checked_Out__c</fullName>
    <description>Hidden Field That is Updated When Board Game is Checked Back In. Used to Calculate Average Time the Game is Checked Out.</description>
    <inlineHelpText>Updated When Board Game is Checked Back In. Used to Calculate Average Time the Game is Checked Out.</inlineHelpText>
    <label>Total Min Checked Out</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>