force-app/main/default/objects/BG_Checkout_Log__c/listViews/Currently_Checked_Out_Games.listView-meta.xml
<ListView>
    <fullName>Currently_Checked_Out_Games</fullName>
    <columns>NAME</columns>
    <columns>Event_Name__c</columns>
    <columns>Attendee_Name__c</columns>
    <columns>Board_Game_Name__c</columns>
    <columns>Check_Out_Time__c</columns>
    <columns>Check_In_Time__c</columns>
    <columns>Average_Duration__c</columns>
    <columns>Total_Check_Out_Time_Formula__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Check_In_Time__c</field>
        <operation>equals</operation>
    </filters>
    <label>Currently Checked Out Games</label>
</ListView>